testsuite/bsc.codegen/strings/DigitToInteger_Bad.bsv
(* synthesize *)
module sysDigitToInteger_Bad();
   rule r;
      $display(digitToInteger("a"));
   endrule
endmodule
